# frontend-design-loop-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  pyproject.toml  security_best_practices_report.md  security_best_practices_report_deep_2026-03-07.md  server.json  test-prompt-codex.md
.github/workflows/: ci.yml  release.yml
config/: config.yaml
docs/: CLI_AGENT_HOST_ROUTING_PLAN_2026-03-06.md  FRONTEND_DESIGN_LOOP_MCP.md  LAUNCH_CHECKLIST.md  MCP_DIRECTORY_SUBMISSIONS.md  REASONING_PROMPT_RESEARCH_2026-03-06.md  TROUBLESHOOTING.md
docs/case-studies/: index.md  maidpro.md  rockos.md
docs/skills/frontend-design-loop-mcp/: SKILL.md
prompts/: reasoning_codex_impl.md  reasoning_minimax_free.md  reasoning_opus46_interleaved.md
scripts/: check_registry_ready.py  preflight_check.py  setup.sh  smoke_mcp_stdio.py  smoke_native_cli_vision.py  verify_release.sh
src/design_toolkit/: __init__.py  server.py  utils.py
src/design_toolkit/playbooks/: candidates.md  creativity.md  megamind.md  solve.md  vision_gate.md  winner_selection.md
src/design_toolkit/tools/: __init__.py  context.py  gates.py  preview.py  screenshots.py
src/frontend_design_loop_core/: __init__.py  config.py  image_proxy_context.py  mcp_code_server.py  reasoning_prompts.py  utils.py
src/frontend_design_loop_core/providers/: __init__.py  _cli_base.py  anthropic_vertex.py  base.py  claude_cli.py  codex_cli.py  droid_cli.py  gemini.py  gemini_cli.py  kilo_cli.py  opencode_cli.py  openrouter.py  vertex.py
src/frontend_design_loop_mcp/: __init__.py  mcp_server.py  runtime_paths.py  setup.py
src/frontend_design_loop_mcp/assets/prompts/: reasoning_deepthink.md  reasoning_gemini_thinking.md  reasoning_megamind.md  reasoning_minimax_free.md  task_templates_extended_pack.md
src/frontend_design_loop_mcp/assets/templates/nextjs_app_router_tailwind/: package-lock.json  package.json
src/frontend_design_loop_mcp/assets/templates/nextjs_app_router_tailwind/app/: layout.tsx  page.tsx
templates/nextjs_app_router_tailwind/: next.config.mjs
tests/: __init__.py  test_cli_providers.py  test_design_toolkit_server_contract.py  test_frontend_design_loop_mcp_server.py  test_frontend_design_loop_setup.py  test_kilo_patch_bundle_parsing.py  test_mcp_code_server_apply_guard.py  test_mcp_code_server_auto_context.py  test_mcp_code_server_creativity.py  test_mcp_code_server_end_to_end.py  test_mcp_code_server_error_artifacts.py  test_mcp_code_server_eval_patch.py  test_mcp_code_server_host_modes.py  test_mcp_code_server_patch_apply.py  test_mcp_code_server_playwright_hints.py  test_mcp_code_server_selection.py  test_registry_ready.py  test_runtime_paths.py  test_utils.py  test_utils_loose_patch_bundle.py
